<resources>
    <string name="app_name">MusicVK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="my_music">Мої Аудіозаписи</string>
    <string name="popular">Популярне</string>
    <string name="recomend">Рекомендовано</string>
    <string name="exit">Вийти</string>
    <string name="setting">Налаштування</string>
    <string name="sort_by">Сортувати по</string>
    <string name="auto_complete">Виправляти помилки</string>
    <string name="performer_only">Пошук тільки по виконавцю</string>
    <string name="preferences">Mypref</string>
    <string name="like">Сподобалось</string>
    <string name="cleared_histoty">Історія видалена</string>
    <string name="input_search_query">Введіть пошуковий запит</string>
    <string name="clear_history">Видалити історію пошуку</string>
    <string name="nothing_search">Нічого не знайдено(</string>
    <string name="downloading">завантаження . . .</string>
    <string name="player">Плеєр</string>
    <string name="buffering">...буферизація...</string>
    <string name="current_play_list">Поточний плейліст</string>
    <string name="pref_search">Налаштування пошуку</string>
    <string-array name="list_of_type_sort">
        <item>Популярності</item>
        <item>Час композиції</item>
        <item>Даті додавання</item>
    </string-array>
    <string name="saved">Збережено</string>
    <string name="user_load_failed">Не вдалося завантажити конфігурацію користувача</string>
    <string name="eror">ПОМИЛКА</string>
    <string name="empty_playlist">Плейліст пустий</string>
    <string name="nothing_save">У вас ще немає збережених</string>
    <string name="nothing_music">У вас ще немає аудіозаписів</string>
    <string name="search_result">"Результати пошуку - "</string>
    <string name="wait">Зачекайте. Збереження... </string>
    <string name="size">"Розмір файлу: "</string>
    <string name="is_in_my_music">Дана композиція є в ваших аудіозаписах</string>
    <string name="network_error">Помилка мережі</string>
    <string name="bitsstream_error">Помилка кодування</string>
    <string name="name_info">Назва композиції</string>
    <string name="author_info">Виконавець</string>
    <string name="size_info">Розмір</string>
    <string name="time_info">Час композиції</string>
    <string name="text_info">Текст</string>
    <string name="genre_info">Жанр</string>
    <string name="no_data">Дані відсутні</string>
    <string name="enter">Ввійти</string>
    <string name="setting_download">Завантаження</string>
    <string name="select_folder">Папка для завантажень</string>
    <string name="clear_history_download">Видалити історію завантажень</string>
    <string name="down_in_downloads">Файл буде завантажено в папку /Downloads</string>
    <string name="added_to_my_music">Композиція %1$s додана в ваші аудіозаписи</string>
    <integer name="com_vk_sdk_AppId">5721259</integer>
    <string name="dont_granted">Разрешение для работы с памятью не включено</string>
    <string name="grant_instructions">Откройте Разрешения и включите разрешение Память</string>
    <string name="change_downloads_folder">"Файл буде завантажено в "</string>
    <string name="info_about_my_music">Відображаються не всі аудіозаписи, тому що деякі аудіо
      вилучені за запитом правовласників і тому доступні тільки в офіційних клієнтів Вконтакте</string>
    <string name="error_end_date">Вибачте, додаток більше не працює. При подальшому використанні можливі помилки</string>
</resources>
