<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_music"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_music"/>
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/popular"/>
        <item
            android:id="@+id/nav_recomend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/recomend"/>

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/update"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/exit"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting"/>
        </menu>
    </item>

</menu>
